--- a/index.html
+++ b/index.html
@@ -395,11 +395,10 @@
             >
           </div>
           <div class="contacts">
-            <p class="contacts-text">
-              <span class="adress">г. Киев, пр-т Леси Украинки, 26</span> <br />
-              <span class="mail">info@example.com</span> <br />
-              <span class="phone">+38 099 111 11 11</span> <br />
-            </p>
+              <p class="adress">г. Киев, пр-т Леси Украинки, 26</p>
+              <p class="mail">info@example.com</p>
+              <p class="phone">+38 099 111 11 11</p>
+            </d>
           </div>
         </div>
 
