--- a/portfolio.html
+++ b/portfolio.html
@@ -306,18 +306,16 @@
         <div class="logo-contacts">
           <div class="footer-logo">
             <a href="" class="logo-white link">
-              <span class="logo-accent link">Web</span> Studio</a
-            >
+              <span class="logo-accent link">Web</span> Studio</a>
           </div>
           <div class="contacts">
-            <p class="contacts-text">
-              <span class="adress">г. Киев, пр-т Леси Украинки, 26</span> <br />
-              <span class="mail">info@example.com</span> <br />
-              <span class="phone">+38 099 111 11 11</span> <br />
-            </p>
+            <p class="adress">г. Киев, пр-т Леси Украинки, 26</p>
+            <p class="mail">info@example.com</p>
+            <p class="phone">+38 099 111 11 11</p>
+            </d>
           </div>
         </div>
-
+    
         <div class="footer-social">
           <p class="footer-text">Присоединяйтесь</p>
           <ul class="footer-list list">
@@ -351,7 +349,7 @@
             </li>
           </ul>
         </div>
-
+    
         <div class="subscribe">
           <p class="text">Подпишитесь на рассылку</p>
           <button class="footer-btn">
