--- a/index.html
+++ b/index.html
@@ -384,6 +384,69 @@
           </ul>
         </div>
       </section>
+
+      <!-- Модальное окно -->
+
+      <div class="backdrop is-hidden">
+        <div class="modal">
+          <form class="modal-form">
+            <h2 class="form-title">
+              Оставьте свои данные, мы вам перезвоним
+            </h2>
+
+            <label class="form-group"
+              ><input
+                type="text"
+                name="name-text"
+                class="form-input"
+              />
+              <svg class="input-icon">
+                <use href=./images/sprite.svg#icon-person></use>
+              </svg>
+              Имя</label
+            >
+
+            <label class="form-group"
+              ><input type="tel" name="tel" class="form-input" /><svg class="input-icon">
+                <use href=./images/sprite.svg#icon-phone></use>
+              </svg>Телефон</label
+            >
+
+            <label class="form-group"
+              ><input type="email" name="mail" class="form-input" /><svg class="input-icon">
+                <use href=./images/sprite.svg#icon-email></use>
+              </svg>Почта</label
+            >
+
+            <label for="comment">Комментарий</label>
+            <textarea
+              name="comment"
+              id="comment"
+              rows="10"
+              placeholder="Введите текст"
+              class="comment"
+            >
+            </textarea>
+            <div class="checkbox">
+              <input type="checkbox" name="chekbox" id="check" />
+              <label for="check" class="checkbox-text"
+                >Соглашаюсь с рассылкой и принимаю
+                <a href="#" class="checkbox-link">Условия договора</a></label
+              >
+            </div>
+            <div class="form-button">
+              <button type="submit" class="snd-btn">Отправить</button>
+            </div>
+
+            <button class="cls-btn">
+              <svg class="cls-btn-icon" width="18" height="18">
+                <use href=./images/sprite.svg#icon-close></use>
+              </svg>
+
+            </button>
+          </form>
+        </div>
+      </div>
     </main>
     <!-- Футер -->
     <footer class="footer">
@@ -395,39 +458,56 @@
             >
           </div>
           <div class="contacts">
-              <p class="adress">г. Киев, пр-т Леси Украинки, 26</p>
-              <p class="mail">info@example.com</p>
-              <p class="phone">+38 099 111 11 11</p>
-            </d>
+            <p class="adress">г. Киев, пр-т Леси Украинки, 26</p>
+            <p class="mail">info@example.com</p>
+            <p class="phone">+38 099 111 11 11</p>
           </div>
         </div>
 
+        <!-- Социальные сети -->
+
         <div class="footer-social">
-          <p class="footer-text">Присоединяйтесь</p>
-          <ul class="footer-list list">
+          <p class="footer-social-text">Присоединяйтесь</p>
+          <ul class="footer-social-list list">
             <li class="item">
-              <a href="" aria-label="Ссылка на Instagram" class="footer-link">
+              <a
+                href=""
+                aria-label="Ссылка на Instagram"
+                class="footer-social-link"
+              >
                 <svg class="footer-link-logo">
                   <use href="./images/sprite.svg#instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="item">
-              <a href="" aria-label="Ссылка на Twitter" class="footer-link">
+              <a
+                href=""
+                aria-label="Ссылка на Twitter"
+                class="footer-social-link"
+              >
                 <svg class="footer-link-logo">
                   <use href="./images/sprite.svg#twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="item">
-              <a href="" aria-label="Ссылка на Facebook" class="footer-link">
+              <a
+                href=""
+                aria-label="Ссылка на Facebook"
+                class="footer-social-link"
+              >
                 <svg class="footer-link-logo">
                   <use href="./images/sprite.svg#facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="item">
-              <a href="" aria-label="Ссылка на LinkedIn" class="footer-link">
+              <a
+                href=""
+                aria-label="Ссылка на LinkedIn"
+                class="footer-social-link"
+              >
                 <svg class="footer-link-logo">
                   <use href="./images/sprite.svg#linkedin"></use>
                 </svg>
@@ -437,13 +517,28 @@
         </div>
 
         <div class="subscribe">
-          <p class="text">Подпишитесь на рассылку</p>
-          <button class="footer-btn">
-            Подписаться
-            <svg class="footer-btn-icon" width="24" height="24">
-              <use href="./images/sprite.svg#send"></use>
-            </svg>
-          </button>
+          <form class="footer-form">
+            <div class="form-field">
+              <div class="form-input">
+                <label for="mail">Подпишитесь на рассылку</label>
+                <input
+                  type="email"
+                  name="subscribe-mail"
+                  id="mail"
+                  placeholder="E-mail"
+                />
+              </div>
+
+              <div class="form-btn">
+                <button type="submit" class="footer-btn">
+                  Подписаться
+                  <svg class="footer-btn-icon" width="24" height="24">
+                    <use href="./images/sprite.svg#send"></use>
+                  </svg>
+                </button>
+              </div>
+            </div>
+          </form>
         </div>
       </div>
     </footer>
