Modal-form correction

--- a/index.html
+++ b/index.html
@@ -442,13 +442,12 @@
               ><span class="comment-label">Комментарий</span>
             </label>
 
-            <div class="checkbox">
-              <input type="checkbox" name="chekbox" id="check" />
-              <label for="check" class="checkbox-text"
-                >Соглашаюсь с рассылкой и принимаю
-                <a href="#" class="checkbox-link">Условия договора</a></label
-              >
-            </div>
+            <label class="checkbox-label">
+              <input type="checkbox" name="chekbox" class="checkbox" />
+              <span class="checkbox-icon"></span>
+              Соглашаюсь с рассылкой и принимаю Условия договора</label
+            >
+
             <div class="form-button">
               <button type="submit" class="snd-btn">Отправить</button>
             </div>
