--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           Эффективные решения <br />
           для вашего бизнеса
         </h1>
-        <button class="hero-btn">Заказать услугу</button>
+        <button class="hero-btn" data-open-modal>Заказать услугу</button>
       </section>
 
       <!-- Особенности -->
@@ -387,7 +387,7 @@
 
       <!-- Модальное окно -->
 
-      <div class="backdrop is-hidden">
+      <div class="backdrop is-hidden" data-backdrop>
         <div class="modal">
           <form class="modal-form" autocomplete="off">
             <h2 class="form-title">
@@ -452,7 +452,7 @@
               <button type="submit" class="snd-btn">Отправить</button>
             </div>
 
-            <button class="cls-btn">
+            <button class="cls-btn" data-close-modal>
               <svg class="cls-btn-icon" width="18" height="18">
                 <use href="./images/sprite.svg#icon-close"></use>
               </svg>
@@ -555,5 +555,26 @@
         </div>
       </div>
     </footer>
+
+    <script>
+      const refs = {
+        openModalBtn: document.querySelector('[data-open-modal]'),
+        closeModalBtn: document.querySelector('[data-close-modal]'),
+        backdrop: document.querySelector('[data-backdrop]'),
+      };
+
+      refs.openModalBtn.addEventListener('click', toggleModal);
+      refs.closeModalBtn.addEventListener('click', toggleModal);
+
+      refs.backdrop.addEventListener('click', logBackdropClick);
+
+      function toggleModal() {
+        refs.backdrop.classList.toggle('is-hidden');
+      }
+
+      function logBackdropClick() {
+        console.log('Это клик в бекдроп');
+      }
+    </script>
   </body>
 </html>
