Анимация модалки при открытии/закрытии

--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
               <button type="submit" class="snd-btn">Отправить</button>
             </div>
 
-            <button class="cls-btn" data-close-modal>
+            <button type="button" class="cls-btn" data-close-modal>
               <svg class="cls-btn-icon" width="18" height="18">
                 <use href="./images/sprite.svg#icon-close"></use>
               </svg>
