--- a/portfolio.html
+++ b/portfolio.html
@@ -371,7 +371,7 @@
         <div class="subscribe">
           <form class="footer-form">
             <div class="form-field">
-              <div class="form-input">
+              <div class="footer-form-input">
                 <label for="mail">Подпишитесь на рассылку</label>
                 <input
                   type="email"
